# extensions-DoseCalculation

./: CMakeLists.txt  README.txt  Setup.cmake
Renderers/CUDA/: RayCaster.cu  RayCaster.h
Renderers/OpenGL/: DoseCalcRenderingView.cpp  DoseCalcRenderingView.h  DoseCalcSelectionRenderer.cpp  DoseCalcSelectionRenderer.h  RayCastRenderingView.cpp  RayCastRenderingView.h
Resources/: CopyTexture3DResource.cpp  CopyTexture3DResource.h  EmptyTexture3DResource.h  ITexture3DResource.h  MHDResource.cpp  MHDResource.h  TemplatedMHDResource.h
Scene/: Beam.cpp  Beam.h  BeamNode.cpp  BeamNode.h  DoseCalcNode.cpp  DoseCalcNode.h
Utils/: DoseTrigger.h  DozeSetup.h
Utils/CUDA/: CudaBeam.h  DoseCalc.cu  DoseCalc.h  Doze.h  DozeCuda.h  DozeSetup.cu  Matrix3x3.h  Superposition.cu  Superposition.h  float_util.hcu  uint_util.hcu
